--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,25 @@
 language: python
-python:
-  - "2.7"
+
+matrix:
+  include:
+    - python: 2.7
+      env: TEST_ENV=UNITTEST
+    - os: linux
+      language: generic
+      env: TEST_ENV=INTEGRATION
+      sudo: required
+  fast_finish: true
+
+services:
+  - docker
+
 # command to install dependencies
-install: "pip install -r requirements.txt"
+install:
+  - if [ "$TEST_ENV" = "UNITTEST" ]; then pip install -r requirements.txt; fi
+  - if [ "$TEST_ENV" = "INTEGRATION" ]; then docker pull ilcdirac/slc6-base; fi
+
 # command to run tests
 script:
   - export PYTHONPATH=${PWD%/*}
   - ls $PYTHONPATH
-  - py.test
+  - if [ "$TEST_ENV" = "UNITTEST" ]; then py.test; fi
