--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ services:
 # command to install dependencies
 install:
   - if [ "$TEST_ENV" = "UNITTEST" ]; then pip install -r requirements.txt; fi
-  - if [ "$TEST_ENV" = "INTEGRATION" ]; then docker pull ilcdirac/slc6-base; fi
+  - if [ "$TEST_ENV" = "INTEGRATION" ]; then sudo docker pull ilcdirac/slc6-base; fi
 
 # command to run tests
 script:
