--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 sudo: required
 
-language: ruby
+language: generic
 
 services:
   - docker
 
 before_install:
-- docker pull carlad/sinatra
-- docker run -d -p 127.0.0.1:80:4567 carlad/sinatra /bin/sh -c "cd /root/sinatra; bundle exec foreman start;"
+- docker pull ilcdirac/slc6-base
+- docker run -t -t ilcdirac/sl6-base /bin/bash 
 - docker ps -a
-- docker run carlad/sinatra /bin/sh -c "cd /root/sinatra; bundle exec rake test"
 
 script:
-- bundle exec rake test
+- ls
+- cd
+- ls
