--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,8 @@
-sudo: required
+sudo: true
 
-language: generic
-
-services:
-  - docker
-
-before_install:
-- docker pull ilcdirac/slc6-base
-- docker ps -a
-- docker run -d -p 127.0.0.1:80:4567 ilcdirac/slc6-base /bin/sh -c "ls; cd; ls;"
-- docker ps -a
-- docker run ilcdirac/slc6-base /bin/bash -c "ls; cd; ls;"
-- docker ps -a
+install:
+  - curl -sLo - http://j.mp/install-travis-docker | sh -xe
 
 script:
-- ls
-- cd
-- ls
+  - ./run 'docker build -t test . && docker run test'
+  - ./run 'docker-compose up -d blog && docker ps'
