--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,16 @@ env: TEST_ENV=INTEGRATION
 
 services:
   - docker
-  - mysql
+
+addons:
+  apt:
+    packages:
+    - mysql-server-5.6
+    - mysql-client-core-5.6
+    - mysql-client-5.6
+
+before_install:
+  - mysql -e "create database IF NOT EXISTS test;" -uroot
 
 # command to install dependencies
 install:
