--- a/tests/Jenkins/install.cfg
+++ b/tests/Jenkins/install.cfg
@@ -1,7 +1,7 @@
 # This section determines which DIRAC components will be installed and where
 LocalInstallation
 {
-  Release = v6r15
+  Release = VAR_Release
   InstallType = server
   LcgVer = VAR_LcgVer
   UseVersionsDir = no
@@ -51,11 +51,12 @@ LocalInstallation
   Services += ResourceStatus/ResourceStatus
   Database
   {
-    User = travis
-    Password = 
-    RootUser = root
-    RootPwd = 
-    Host = 127.0.0.1
-    Port = 
+    User = VAR_DB_User
+    Password = VAR_DB_Password
+    RootUser = VAR_DB_RootUser
+    RootPwd = VAR_DB_RootPwd
+    Host = VAR_DB_Host
+    Port = VAR_DB_Port
   }
 }
+
