--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,8 @@ install:
 script:
   - export PYTHONPATH=${PWD%/*}
   - ls $PYTHONPATH
-  - docker run -d -i -t -p 3306:3306 --name testinstance -v ${PWD}:/root/TestCode/DIRAC ilcdirac/slc6-base /bin/bash
+  - alias hostip="ip route show 0.0.0.0/0 | grep -Eo 'via \S+' | awk '{ print \$2 }'"
+  - docker run -d -i -t --add-host=mysqlmachine:$(hostip) --name testinstance -v ${PWD}:/root/TestCode/DIRAC ilcdirac/slc6-base /bin/bash
   - export CONTAINER=`sudo docker ps -q`
   - docker exec $CONTAINER /bin/bash -c "cd && source TestCode/DIRAC/tests/Jenkins/setup_travis.sh && source TestCode/DIRAC/tests/Jenkins/dirac_ci.sh && fullInstallDIRAC"
 
