--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ script:
   - ls $PYTHONPATH
   - export HOSTIP=`ip route show 0.0.0.0/0 | grep -Eo 'via \S+' | awk '{ print \$2 }'`
   - echo $HOSTIP
-  - docker run -d -i -t --add-host=mysqlmachine:$HOSTIP --name testinstance -v ${PWD}:/root/TestCode/DIRAC ilcdirac/slc6-base /bin/bash
+  - docker run -d -i -t --add-host=mysqlmachine:$HOSTIP -h localhost -v ${PWD}:/root/TestCode/DIRAC ilcdirac/slc6-base /bin/bash
   - export CONTAINER=`sudo docker ps -q`
   - docker exec $CONTAINER /bin/bash -c "cd && source TestCode/DIRAC/tests/Jenkins/setup_travis.sh && source TestCode/DIRAC/tests/Jenkins/dirac_ci.sh && fullInstallDIRAC"
 
